# gupcap

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
aulas/secao02_introducao/: conceitos_concorrencia_assincrono.py  performance_padrao_python.ipynb  tipos_de_concorrencia.py
aulas/secao03_threads/: comunicacao_entre_threads.py  criando_threads_multiplas.ipynb  criando_threads_simples.ipynb  funcionamento_das_threads.ipynb  sincronizacao_de_threads.ipynb
aulas/secao03_threads/exercicios_praticos/: banco_inseguro.py  banco_seguro.py  performance_python_threads.py
aulas/secao04_multiprocessamento/: abstraindo_mecanismos_de_concorrencia.ipynb  api_multiprocessamento_Python.ipynb  compartilhamento_de_estados_entre_processos.ipynb  comunicacao_entre_processos.ipynb  exemplo_de_multiprocessing.ipynb  introducao_multiprocessamento.ipynb  performance_python_multiprocessos.py  processos_vs_threads.ipynb  sincronizacao_de_processos.ipynb  trabalhando_com_pools_de_processos.ipynb
aulas/secao05_async/: assincronia_em_thread.ipynb  bibliotecas_asyncio.ipynb  compreendendo_asyncio.ipynb  eventos_multitarefas_corrotinas.ipynb  introducao_async.ipynb
aulas/secao05_async/exercicios_praticos/: as_aiofiles.py  async1.py  async2.py  async3.py  corrotina1.py  corrotina2.py  generator1.py
aulas/secao06_cython/: conceitos_do_Cython.ipynb  introducao_ao_cython.ipynb
aulas/secao07_intro_fastAPI/: introducao_ao_fastAPI.ipynb
aulas/seçao02_introducao/: concorrencia_em_Python.py  gil_global_interpreter_lock.py  performance_padrao_python.ipynb
(+7 files in other folders)
