[tool.poetry]
name = "gupcap"
version = "0.1.0"
description = ""
authors = ["Edson Pimenta <edson.tibo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
nbqa = {extras = ["toolchain"], version = "^1.5.3"}
black = "^22.10.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
